--- a/src/pages/slidetest/slidetest.html
+++ b/src/pages/slidetest/slidetest.html
@@ -354,7 +354,7 @@
         <div class="area" id="ion-label-area-1">
           <div *ngIf="mainlist_mine.length!=0" class="container">
             <div class="avatars">
-              <div (click)="godetail(b,1)" *ngFor="let b of mainlist_mine" class="avatar">
+              <div *ngFor="let b of mainlist_mine" (click)="godetail(b,1)" class="avatar">
                 <div class="avatartext">{{b.name}}</div>
               </div>
             </div>
@@ -376,12 +376,13 @@
                 </div>
               </div>
             </ion-item>
-            <ion-item (click)="gotomorepage(main,1)" class="it" *ngFor="let main of mainlist_choice">
+            <ion-item *ngFor="let main of mainlist_choice" (click)="gotomorepage(main,1)" class="it"> 
               <div class="chat-container">
                 <div class="chat-messages">
                   <div class="message">
                     <div class="message-content">
                       <div *ngIf="main.numofpeople!=''" class="contentmain">
+                        <!-- avec == true -->
                         <p *ngIf="main.avec" style="font-size: 18px; font-weight: 900;">
                           {{main.v}} #{{main.name}}  
                           <span class="sm">
@@ -395,6 +396,8 @@
                           </span>  
                           <span></span>
                         </p>
+                        <!-- avec == true :)-->
+                        <!-- avec == false -->
                         <p *ngIf="!main.avec" style="font-size: 18px; font-weight: 900;">
                           {{main.v}} #{{main.name}} 
                           <span class="sm">
@@ -408,6 +411,7 @@
                           </span>  
                           <img *ngIf="main.onStatus!=undefined&&main.onStatus" style="width: 47px; height: 36px; margin: auto;" src="assets/img/load.gif"/> 
                         </p>
+                        <!-- avec == false :) -->
                         <span *ngIf="main.status=='fin'" style="border: solid 1px; font-size: 12px; padding: 3px; margin-left: 10px; background: white;" >
                           종료
                         </span>
@@ -529,6 +533,7 @@
                   <div class="message">
                     <div class="message-content">
                       <div *ngIf="main.numofpeople!=''" class="contentmain">
+                        <!-- main.avec == true -->
                         <p *ngIf="main.avec" style="font-size: 18px; font-weight: 900;">
                           {{main.v}} #{{main.name}}  
                           <span class="sm">
@@ -542,6 +547,8 @@
                           </span>  
                           <span></span>
                         </p>
+                        <!-- main.avec == true :) -->
+                        <!-- main.avec == false -->
                         <p *ngIf="!main.avec" style="font-size: 18px; font-weight: 900;">
                           {{main.v}} #{{main.name}} 
                           <span class="sm">
@@ -555,6 +562,7 @@
                           </span>  
                           <span></span>
                         </p>
+                        <!-- main.avec == false :) -->
                         <span *ngIf="main.status=='fin'" style=" border: solid 1px; font-size: 12px; padding: 3px; margin-left: 10px; background: white;" >
                           종료
                         </span>
@@ -854,7 +862,7 @@
                 <tr *ngFor="let a of todayatt let j = index" (click)="editing(a);" style="border-bottom: 1px solid;">
                   <ng-container *ngIf="a.teamname == myteam">
                     <td>{{j+1}}</td>
-                    <td>{{a.teamname}}</td>
+                    <td>{{a.name}}</td>
                     <td>{{a.wantee}}</td>
                     <td>{{a.bantee}}</td>
                     <td>{{a.jjing}}</td>
